--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="HandheldFriendly" content="True">
 		<meta name="MobileOptimized" content="320">
 		<meta http-equiv="cleartype" content="on">
-		<meta name="viewport" content="width=640,target-densitydpi=device-dpi,user-scalable=noa," />
+		<meta name="viewport" content="width=640,target-densitydpi=device-dpi,user-scalable=no," />
 		<!-- Who owns the content of this site? -->
 		<meta name="Copyright" content="wangfan" />
 		<meta name="author" content="wushuyi" />
@@ -19,27 +19,12 @@
 		<link rel="stylesheet" href="./js/vendor/jscrollpane/jquery.jscrollpane.css">
 		<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 		<script src="js/vendor/jquery-1.11.0.min.js"></script>
+		<script src="js/adapt.js"></script>
 		<script src="js/vendor/jquery.easing.1.3.js"></script>
 		<script src="./js/vendor/jscrollpane/jquery.jscrollpane.min.js"></script>
 		<script src="./js/vendor/jscrollpane/jquery.mousewheel.js"></script>
 		<script src="./js/vendor/TweenMax.min.js"></script>
-		<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-49697361-1']);
-  _gaq.push(['_setDomainName', (function(){var a = location.host.split(".");a.shift();return a.join(".");})()]);
-  _gaq.push(['_setAllowLinker', true]);
-  _gaq.push(['_setAllowHash', false]);
-  _gaq.push(['_trackPageview']);
-
- (function(){
-    var ga = document.createElement('script');
-    ga.type = 'text/javascript';
-    ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; 
-    s.parentNode.insertBefore(ga, s);
-})();
-</script>
+		
 <script src="js/total.js"></script>
 		<script src="js/page.js"></script>
 	</head>
@@ -87,8 +72,8 @@
 				 <div class="select_box">选择您所在的城市<span class="triangle"></span></div>
 			 </div>
 			 <div class="btn">
-				<a target="_blank" href="https://creditcard.pingan.com.cn/financing/public/newApplyCard.do?scc=OTAwMDAwMDA4&ccp=3&paSignature=1EAEE383AD2A7D075DFE7F3DC64CE4B446365D9A1B4A3D02391E7EB5B273DEDE4EB1BB0C42EC84D9170ACA7DA04B7F2873434594430D397A6AED7DA26D58DA3337C9A5E3A042FDABFA5C5E4E7BF10CB4B833A9A936A3B904E3A359A11859ED6D62644393354DC0D0F8A95606587AEFF6E891340E8A627C635F23996AD048CB65">
-			 	<img class=".img" src="./img/btn.jpg" alt="">
+				<a target="_blank" href="http://pinganjiayouyouhui.wangfan.com/shanghaievent/">
+			 	<img class=".img" src="./img/m_btn.jpg" alt="">
 				</a>
 			 </div>
 		</div>
@@ -97,4 +82,21 @@
 		function imgdragstart(){return false;}
 		for(i in document.images)document.images[i].ondragstart=imgdragstart;
 	</script>
+	<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-49697361-1']);
+  _gaq.push(['_setDomainName', (function(){var a = location.host.split(".");a.shift();return a.join(".");})()]);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_setAllowHash', false]);
+  _gaq.push(['_trackPageview']);
+
+ (function(){
+    var ga = document.createElement('script');
+    ga.type = 'text/javascript';
+    ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; 
+    s.parentNode.insertBefore(ga, s);
+})();
+</script>
 </html>
